# paragraf

./: .gitignore  AI-PRIMER.md  CHANGELOG.md  README.md  kdt-notes.md  package-lock.json  package.json  render-pdf-selectable-roadmap.md  tsconfig.json
0-color/: package-lock.json  package.json  vitest.config.ts
0-types/: CHANGELOG.md  README.md  package.json  tsconfig.json  tsup.config.ts
1-knuth-plass/: ARCHITECTURE.md  CHANGELOG.md  TODO.md  package-lock.json  package.json  tsconfig.json
1-knuth-plass/wasm/: Cargo.toml
1-linebreak/: package.json
1a-linebreak/: CHANGELOG.md  README.md  package.json  vitest.config.ts
1b-font-engine/: CHANGELOG.md  README.md  package.json
1b-shaping-wasm/: package.json  tsconfig.json
1c-layout/: CHANGELOG.md  README.md  package.json
1d-style/: CHANGELOG.md  README.md  package.json
2-color/: README.md  package.json
2a-render-core/: package.json
2a-shaping-wasm/: .npmignore  CHANGELOG.md  README.md  package.json  tsup.config.ts
2b-render-core/: CHANGELOG.md  README.md  package.json
2b-render-pdf/: package.json
2c-color-wasm/: package.json  tsup.config.ts
3a-typography/: CHANGELOG.md  README.md  package.json
3b-render-pdf/: CHANGELOG.md  README.md  package.json  tsconfig.json
4a-template/: CHANGELOG.md  LICENSE  README.md  package.json
4b-compile/: CHANGELOG.md  README.md  package.json
demo/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: dependency.md  document-model.md  excuse-me-kemal-I-forked-up.md  getting-started.md  io-schemas.md  roadmap-decisions.md  roadmap.md  step-1-tasks.md  (+10 more)
(+348 files in other folders)
